--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.27",
     "@types/react-animations": "^1.0.0",
     "@types/react-dom": "18.0.10",
+    "animate.css": "^4.1.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
     "framer-motion": "^8.5.5",
